--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,7 +14,7 @@
 
                 <header>
                     <img src="/assets/logo.svg" alt="Logomarca"> 
-                    <a href="/creat-point"> 
+                    <a href="/create-point"> 
                         <span></span>
                         Cadastre um ponto de coleta
                     </a>  
