--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -14,36 +14,38 @@
     {% include "partials/page-header.html" %}
 
     <main>
+
+    {% if total > 0 %}
         <h4>
-            <strong>2 pontos</strong>
+            <strong>{{ total }} pontos</strong>
             encontrados
         </h4>
 
         <div class="cards">
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1503596476-1c12a8ba09a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80" alt="Colectoria">
-                <h1>Colectoria</h1>
-                <h3>Resíduos Eletrônicos, Lâmpadas</h3>
-                <p>
-                    Rio do Sul, Santa Catarina
-                    <br/>
-                    Guilherme Gemballa, Jardin América
-                    <br/>
-                    Número 260
-                </p>
-            </div>
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1101&q=80" alt="Papersider">
-                <h1>Papersider</h1>
-                <h3>Papéis e Papelão</h3>
-                <p>
-                    Rio do Sul, Santa Catarina
-                    <br/>
-                    Guilherme Gemballa, Jardin América
-                    <br/>
-                    Número 260
-                </p>
-            </div>
-        </div>
+
+            {% for place in places %}
+
+                <div class="card">
+                    <img src="{{ place.image }}" alt="{{ place.name }}">
+                    <h1>{{ place.name }}</h1>
+                    <h3>{{ place.items }}</h3>
+                    <p>
+                        {{ place.city }}, {{ place.state }}
+                        <br/>
+                        {{ place.address }}
+                        <br/>
+                        {{ place.address2 }}
+                    </p>
+                </div>
+
+            {% endfor %}
+    {%else%}
+
+        <h4><strong>Nenhum</strong> local encontrado</h4>
+            
+    {% endif %}
+
+        
+
     </main>
 {% endblock content %}
